@@ -160,20 +160,6 @@ but you may still browse the existing database."), yesno => 1, text => { no => N
 
 sub init() {
     URPM::bind_rpm_textdomain_codeset();
-    if (!$> && !$offered_to_add_sources->[0]) {
-        if (interactive_msg(N("Welcome"),
-                            join("\n\n",
-                                 N("The software installation tool can set up media sources."),
-                                 N("Do you want to add media sources now?"),
-                                 ),
-                            yesno => 1,
-                        )
-        ) {
-            require Rpmdrake::edit_urpm_sources;
-            Rpmdrake::edit_urpm_sources::easy_add_callback();
-        }
-        $offered_to_add_sources->[0] = 1;
-    }
 }
 
 1;
