@@ -1,3 +1,4 @@
+- do not ask sources on startup
 - gurpmi.addmedia:
   o handle --urpmi-root
 - rpmdrake:
